# wasm-languages

./: .gitignore  Makefile  README.md
AssemblyScript/: asconfig.json  package-lock.json  package.json
AssemblyScript/assembly/: import.ts  index.ts  memory.ts  simple.ts  vector.ts  wasi.ts
Emscripten/: main.cpp
Grain/: main.gr  main.wasm
Runner/: Cargo.toml  as.wasm  emcc.wasm  grain.wasm  import.wasm  rust.wasm  simple.wasm  special.wasm  tinygo.wasm  wasi.wasm  zig.wasm
Runner/src/: main.rs
Rust/: Cargo.toml
Rust/src/: lib.rs  main.rs
TinyGo/: main.go  main.wasm
Zig/: main.wasm
Zig/src/: main.zig
