[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
# rustflags = ["-Clink-args=-s"] # TODO: Use when profile-rustflags lands

[dependencies]
